--- a/style-pattern.css
+++ b/style-pattern.css
@@ -104,19 +104,19 @@ section {
 }
 
 .primary {
-  background-color: #77c4d3;
+  background-color: #F02D3A;
 }
 
 .accent1 {
-  background-color: #ea2e49;
+  background-color: #232ED1;
 }
 
 .accent2 {
-  background-color: rgba(246, 247, 146, 0.9);
+  background-color: #FAFF00;
 }
 
 .text-dark {
-  background-color: #333;
+  background-color: #242423;
 }
 
 .element {
