--- a/style-pattern.css
+++ b/style-pattern.css
@@ -1,182 +1,17 @@
-h2,
-h3,
-h4 {
-  font-family: "arial narrow", Arial, Verdana, sans-serif;
-  margin: 0;
-}
+/* Error: Undefined mixin.
+ *    ,
+ * 29 |   @include atoms.set-flex();
+ *    |   ^^^^^^^^^^^^^^^^^^^^^^^^^
+ *    '
+ *   style-pattern.scss 29:3  root stylesheet */
 
-h1 {
-  background: #ea2e49;
-  color: #fff;
-  display: inline-block;
-  font-weight: normal;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
   margin-bottom: 1em;
-  padding: 0.5em 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined mixin.\a    \2577 \a 29 \2502    @include atoms.set-flex();\a    \2502    ^^^^^^^^^^^^^^^^^^^^^^^^^\a    \2575 \a   style-pattern.scss 29:3  root stylesheet";
 }
-
-h2 {
-  color: #fff;
-  font-weight: 900;
-  /* Heavy */
-  font-size: 6em;
-  letter-spacing: 1px;
-  line-height: 1em;
-}
-
-h3 {
-  font-size: 2.25em;
-  font-weight: 200;
-  /* Thin */
-  letter-spacing: 1px;
-  line-height: 1em;
-  padding: 0.5em 0 0.25em 0;
-}
-
-h4 {
-  font-size: 1.5em;
-  font-weight: 200;
-  /* Thin */
-  letter-spacing: 1px;
-  line-height: 1em;
-  margin: 0.5em 0;
-}
-
-p {
-  font-family: verdana, arial, sans-serif;
-  font-size: 1em;
-  line-height: 1.5em;
-  padding: 0.5em 0;
-  margin: 0;
-}
-
-a {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  color: #333;
-  text-decoration: none;
-  transition: border-color 0.2s ease-in-out;
-}
-
-a:hover {
-  border-color: #ea2e49;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-html {
-  background-color: #daede2;
-  padding: 5%;
-}
-
-body {
-  font-family: verdana, arial, sans-serif;
-  font-size: 85%;
-  color: #333;
-  background-color: #77c4d3;
-  margin: 0;
-  padding: 1em;
-}
-
-section {
-  background-color: white;
-  padding: 1em;
-  margin: 1em;
-}
-
-.colors {
-  display: flex;
-  flex-flow: row wrap;
-}
-.colors > h3 {
-  width: 100%;
-  flex: 1 0 100%;
-}
-.colors > figure {
-  margin: 0;
-  flex: 1 1 25%;
-}
-
-.swatch {
-  width: 100%;
-  height: 100px;
-  border: 1px solid;
-}
-
-.primary {
-  background-color: #F02D3A;
-}
-
-.accent1 {
-  background-color: #232ED1;
-}
-
-.accent2 {
-  background-color: #FAFF00;
-}
-
-.text-dark {
-  background-color: #242423;
-}
-
-.element {
-  border: 1px solid;
-  margin: 0.5em;
-  padding: 1em;
-}
-
-.uppercase {
-  font-weight: 300;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  color: #333;
-}
-
-.uppercase-light {
-  font-weight: 300;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  color: #fff;
-}
-
-@font-face {
-  font-family: myFirstFont;
-  src: url(./fonts/new-waltograph/NewWaltDisneyFontRegular-BPen.ttf);
-}
-@font-face {
-  font-family: mySecondFont;
-  src: url(./fonts/wicked-mouse-font/WickedMouse-aGoK.ttf);
-}
-@font-face {
-  font-family: smallerHeading;
-  src: url(./fonts/mouse-handwriting/MouseHandwriting.ttf);
-}
-@font-face {
-  font-family: myPragraphFont;
-  src: url(./fonts/mickorama-25039/Mickorama-5Rez.ttf);
-}
-.heading {
-  font-family: myFirstFont;
-  font-size: 3rem;
-}
-
-.heading2 {
-  font-family: mySecondFont;
-  font-size: 1.6rem;
-}
-
-.heading3 {
-  font-family: smallerHeading;
-  font-size: 2rem;
-}
-
-.the-body {
-  font-family: myPragraphFont;
-  font-size: 1.2rem;
-}
-
-h4.the-body {
-  font-size: 3rem;
-}
-
-/*# sourceMappingURL=style-pattern.css.map */
