--- a/Zenproject/index.scss
+++ b/Zenproject/index.scss
@@ -1,18 +1,4 @@
-<<<<<<< HEAD
-$background-image: url("Zenproject/images/1571660.jpg");
-$fonts-body:
-$font-h1
-$font-h2
-$font-h3: helvetica;
-$color-primary: #F02D3A;
-$color-2: #232ED1;
-$color-3:#FAFF00;
-$color-4:#242423;
-=======
-body
-{color: red;
- background-image: url("background-image.png");
- background-repeat:no-repeat;
-}
+/* No CSS */
+/*# sourceMappingURL=index.css.map */
 
->>>>>>> 977a4e6e6438383e26285a135d654dc6e1912da2
+/*# sourceMappingURL=index.scss.map */
