--- a/Zenproject/index.css
+++ b/Zenproject/index.css
@@ -1,1 +1,132 @@
-/* No CSS *//*# sourceMappingURL=index.css.map */
+@font-face {
+  font-family: headerFont;
+  src: url(./fonts/new-waltograph/NewWaltDisneyFontRegular-BPen.ttf);
+}
+@font-face {
+  font-family: mySecondFont;
+  src: url(./fonts/wicked-mouse-font/WickedMouse-aGoK.ttf);
+}
+@font-face {
+  font-family: smallerHeading;
+  src: url(./fonts/mouse-handwriting/MouseHandwriting.ttf);
+}
+@font-face {
+  font-family: myParagraphFont;
+  src: url(./fonts/mickorama-25039/Mickorama-5Rez.ttf);
+}
+body {
+  color: white;
+  background-image: url("images/1571660.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+  padding: 2em;
+  background-color: black;
+}
+
+header h1 {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 50px;
+  font-family: headerFont;
+  background-image: url("header-background.jpg");
+  transition: transform 0.2s;
+  color: black;
+  width: 60%;
+  margin: auto;
+  border-color: #F02D3A;
+  animation: zoom-in-zoom-out 3s ease infinite;
+}
+
+@keyframes zoom-in-zoom-out {
+  0% {
+    transform: scale(1, 1);
+  }
+  50% {
+    transform: scale(1.2, 1.2);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
+header h1:hover {
+  -ms-transform: scale(1.5);
+  /* IE 9 */
+  -webkit-transform: scale(1.5);
+  /* Safari 3-8 */
+  transform: scale(1.5);
+}
+
+header h2 {
+  text-align: center;
+  text-transform: uppercase;
+  font-family: headerFont;
+  background-image: url("header-background.jpg");
+  color: black;
+  width: 60%;
+  margin: auto;
+  animation: zoom-in-zoom-out 3s ease infinite;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+#zen-summary p {
+  text-align: center;
+  text-transform: uppercase;
+  font-family: headerFont;
+  font-weight: bold;
+  background-color: #F02D3A;
+  width: 60%;
+  margin: auto;
+  margin-top: 5px;
+  border-style: ridge;
+  color: white;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+#zen-preamble {
+  background-color: white;
+  background-position: center;
+  color: black;
+  background-repeat: no-repeat;
+  font-family: myParagraphFont;
+  font-size: 20px;
+  padding: 1em;
+  background-position: center;
+}
+#zen-preamble p {
+  max-width: 100%;
+  margin: auto;
+}
+#zen-preamble h3 {
+  text-align: center;
+}
+
+@media only screen and (min-width: 60em) {
+  #zen-preamble {
+    background-image: url("images/mickey-mouse-border.png");
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    color: black;
+    max-width: 50%;
+    background-size: 100%;
+    padding-bottom: 20px;
+  }
+}
+@media screen and (min-width: 32em) {
+  #zen-preamble {
+    background-position: center;
+    padding: 2em;
+    margin: auto;
+  }
+  #zen-preamble p {
+    max-width: 50%;
+  }
+}
+
+/*# sourceMappingURL=index.css.map */
