--- a/Zenproject/index.css
+++ b/Zenproject/index.css
@@ -1,1 +1,228 @@
-/* No CSS *//*# sourceMappingURL=index.css.map */
+@keyframes rotate {
+  100% {
+    transform: rotate(1turn);
+  }
+}
+/* Specify the animation keyframesto be 
+used to move the letters in the FOOTER */
+@keyframes animate {
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+@font-face {
+  font-family: myPragraphFont;
+  src: url(../fonts/mickorama-25039/Mickorama-5Rez.ttf);
+}
+@font-face {
+  font-family: myFirstFont;
+  src: url(../fonts/new-waltograph/NewWaltDisneyFontRegular-BPen.ttf);
+}
+@font-face {
+  font-family: mySecondFont;
+  src: url(../fonts/wicked-mouse-font/WickedMouse-aGoK.ttf);
+}
+@font-face {
+  font-family: bodyGraph;
+  src: url(../fonts/mouse-memoirs-font/MouseMemoirs-Zg8l.ttf);
+}
+.supporting {
+  display: grid;
+  grid-gap: 50px;
+  background-color: #000;
+  padding: 40px;
+  font-family: myPragraphFont;
+  max-width: 66 characters;
+  font-size: 25px;
+}
+
+.explanation {
+  grid-column: 1/3;
+  grid-row: 1;
+  text-align: center;
+  padding: 20px;
+  border: 9.5px dashed #000;
+  background-image: url("https://www.hakes.com/Image/MediumRes/1828/1/image.jpg");
+  color: #F02D3A;
+  font-weight: 400;
+}
+.explanation h3 {
+  font-family: mySecondFont;
+}
+.explanation:hover {
+  background-image: none;
+  background-color: white;
+  color: blue;
+  cursor: pointer;
+}
+
+.participation {
+  grid-column: 1/3;
+  grid-row: 2;
+  padding: 20px;
+  cursor: pointer;
+  border: 10px solid #000;
+  color: #000;
+  font-size: 27px;
+  font-weight: 300;
+  border-image: none;
+  background-image: url("https://i.etsystatic.com/24197159/c/434/345/42/92/il/180b1d/3171401524/il_340x270.3171401524_l7i3.jpg");
+}
+.participation h3 {
+  text-align: center;
+  text-transform: uppercase;
+  background: -webkit-linear-gradient(cornsilk, #F02D3A, blue, #000);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.participation:hover {
+  background-color: cornsilk;
+  border-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='100' height='100' viewBox='0 0 100 100' fill='none' xmlns='http://www.w3.org/2000/svg'%3E %3Cstyle%3Epath%7Banimation:stroke 10s infinite linear%3B%7D%40keyframes stroke%7Bto%7Bstroke-dashoffset:776%3B%7D%7D%3C/style%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='0%25' y2='100%25'%3E%3Cstop offset='0%25' stop-color='%232d3561' /%3E%3Cstop offset='25%25' stop-color='%23c05c7e' /%3E%3Cstop offset='50%25' stop-color='%23f3826f' /%3E%3Cstop offset='100%25' stop-color='%23ffb961' /%3E%3C/linearGradient%3E %3Cpath d='M1.5 1.5 l97 0l0 97l-97 0 l0 -97' stroke-linecap='square' stroke='url(%23g)' stroke-width='3' stroke-dasharray='388'/%3E %3C/svg%3E") 1;
+  color: blue;
+}
+
+.benefits {
+  grid-column: 1/3;
+  grid-row: 3;
+  background-color: #242423;
+  color: cornsilk;
+  padding: 20px;
+  border-radius: 10px;
+  animation: none;
+  font-size: 41px;
+  cursor: pointer;
+  text-align: center;
+  border: 9.5px dashed #000;
+}
+.benefits h3 {
+  text-align: center;
+  font-family: mySecondFont;
+  font-size: 35px;
+}
+.benefits:hover {
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/f/fe/Mickey_Mouse_head_and_ears.svg/2000px-Mickey_Mouse_head_and_ears.svg.png");
+  color: pink;
+  font-weight: 800;
+  animation: rotate 40s linear infinite;
+}
+
+.requirements {
+  grid-column: 1;
+  grid-row: 4;
+  text-align: center;
+  padding: 20px;
+  background-color: #000;
+  color: white;
+  font-family: bodyGraph;
+}
+.requirements h3 {
+  font-family: myFirstFont;
+  font-size: 3rem;
+  background: -webkit-linear-gradient(#eee, cornsilk);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.requirements:hover {
+  background-color: #F02D3A;
+  color: #000;
+  cursor: pointer;
+}
+
+footer {
+  grid-column: 1;
+  grid-row: 5;
+  text-align: center;
+  padding: 20px;
+  font-size: 30px;
+  background: #000;
+}
+footer a {
+  text-align: center;
+  color: #262626;
+  background: #fff;
+  text-decoration: none;
+  padding: 10px 20px;
+  display: inline-block;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3), 0 5px 0 #ccc;
+  animation: animate 0.5s infinite;
+}
+footer a:hover {
+  background-color: blue;
+  color: cornsilk;
+}
+footer a:nth-child(1) {
+  animation-delay: 0.1s;
+}
+footer a:nth-child(2) {
+  animation-delay: 0.2s;
+}
+footer a:nth-child(3) {
+  animation-delay: 0.3s;
+}
+footer a:nth-child(4) {
+  animation-delay: 0.4s;
+}
+footer a:nth-child(5) {
+  animation-delay: 0.5s;
+}
+
+@media only screen and (max-width: 994px) and (min-width: 650px) {
+  .explanation {
+    grid-column: 1/span 3;
+    grid-row: 1;
+  }
+
+  .participation {
+    grid-column: 1/2;
+    grid-row: 2;
+  }
+
+  .benefits {
+    grid-column: 2/3;
+    grid-row: 2;
+  }
+
+  .requirements {
+    grid-column: 1/span 3;
+    grid-row: 4;
+  }
+
+  footer {
+    grid-column: 1/span 3;
+    grid-row: 3;
+  }
+}
+@media only screen and (min-width: 995px) {
+  .explanation {
+    grid-column: 1/span 2;
+    grid-row: 1;
+  }
+
+  .participation {
+    grid-column: 1/2;
+    grid-row: 2;
+  }
+
+  .benefits {
+    grid-column: 2/3;
+    grid-row: 2;
+  }
+
+  .requirements {
+    grid-column: 3;
+    grid-row: 1/span 2;
+  }
+
+  footer {
+    grid-column: 1/span 3;
+    grid-row: 3;
+  }
+}
+
+/*# sourceMappingURL=index.css.map */
